Use C99 const and in-place declarations.

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ Change log for timelimit, the process time limit tool
 	- remove the $Ringlet tags from the source files [roam]
 	- install the tests as documentation examples [roam]
 	- use the C99 bool type [roam]
+	- use the C99 const keyword and in-place variable declarations [roam]
 
 1.8		2011/04/13
 	- getopt() returns -1 on error, not EOF [roam]
